# prep

./: Evaluating Alternative Data Vendors - Google Gemini.html  cond_prob.md  data_prep.md  data_prep_tmp.html  eval_script.py  feature_generation.md  interview_question.md  modeling_lgb.py  prep_greenbook.md  prep_stats_prob.md  regression.md  regression2.md  roll_a_die.md  stats.md
Evaluating Alternative Data Vendors - Google Gemini_files/: RotateCookiesPage.html  destination  destination(1)  gtm.js  js  proxy(1).html  proxy.html
ml_template/: build_notebooks.py  generate_data.py  pyproject.toml
ml_template/data/: synthetic.parquet
ml_template/docs/superpowers/plans/: 2026-04-24-ml-template.md  2026-04-26-notebook-split.md
ml_template/docs/superpowers/specs/: 2026-04-24-ml-template-design.md  2026-04-26-notebook-split-design.md
